tests/fail/include_self.txt
error[E0035]: same file included twice: /included
 --> /included:1:1
  |
1 | include "included"
  | ^^^^^^^^^^^^^^^^^^ same file included twice: /included
  |
 ::: /INPUT:1:1
  |
1 | include "included"
  | ------------------ already included here
